fix décalage header en modifiant la scrollbar

--- a/src/main/resources/static/css/concours.css
+++ b/src/main/resources/static/css/concours.css
@@ -4,14 +4,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
     background-color: #f0f8ff;
     font-family: 'Kanit', sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    background-color: #f0f8ff;
 }
 
 h1 {
-    text-align: center;
-    margin-bottom: 20px;
     font-size: 24px;
     color: #333;
 }
