--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -2,6 +2,34 @@
 
 body {
     font-family: 'Kanit', sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-y: scroll; /* Permet à la page d'avoir une scrollbar si nécessaire */
+}
+
+/* Personnalisation de la scrollbar */
+::-webkit-scrollbar {
+    width: 8px; /* Taille de la scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Fond de la piste de la scrollbar */
+}
+
+/* Fixer la position de la scrollbar */
+.fixed-scrollbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 8px;
+    background-color: transparent;
+    z-index: 9999; /* S'assurer que la scrollbar est au-dessus du contenu */
 }
 
 .header-box {
@@ -53,7 +81,6 @@ body {
     color: #c3daf0;
     transform: translateY(-5px);
 }
-
 
 .header-misc {
     flex: 1;
